# chat_interface

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md  analysis_options.yaml  build.yaml  flutter-web.bat  flutter_jank_metrics_01.json  flutter_jank_metrics_02.json  flutter_rust_bridge.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
interface/: README.md  generate_rust.bat  pubspec.yaml
lib/: app.dart  input_demo.dart  main.dart  signal_demo.dart  size_demo.dart
libspaceship/: Cargo.toml  nix-shell.sh
libspaceship/src/: api.rs  binding.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs  lib.rs  logger.rs
libspaceship/src/api/: audio_devices.rs  encryption.rs  engine.rs  general.rs  mod.rs
libspaceship/src/audio/: decode.rs  encode.rs  microphone.rs  mod.rs  player.rs
libspaceship/src/communication/: mod.rs
libspaceship/src/connection/: mod.rs  receiver.rs  udp.rs
libspaceship/src/lightwire/: encoder.rs  mod.rs  player.rs  voice.rs
libspaceship/src/util/: crypto.rs  mod.rs
linux/: CMakeLists.txt
liphium_bridge/: pubspec.yaml
liphium_desktop/: pubspec.yaml
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs  lib.rs  logger.rs
rust/src/api/: interaction.rs  mod.rs
rust/src/audio/: decode.rs  encode.rs  microphone.rs  mod.rs  player.rs
rust/src/communication/: mod.rs
rust/src/connection/: mod.rs  udp.rs
rust/src/util/: crypto.rs  hasher.rs  mod.rs
rust/voice_activity_detector/src/: vad.rs
rust_builder/: pubspec.yaml
scripts/: linux_package_zip.sh  run_web.ps1  windows_package_zip.ps1
space-lib/: Cargo.toml
space-lib/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  logger.rs
space-lib/src/audio/: decode.rs  encode.rs  microphone.rs
space-lib/src/connection/: mod.rs  receiver.rs  udp.rs
space-lib/src/util/: crypto.rs  mod.rs
space-test/: Cargo.toml
tabletop/: README.md  pubspec.yaml
(+990 files in other folders)
