[package]
name = "libspaceship"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
audiopus = "0.2.0"
cpal = "0.15.3"
flutter_rust_bridge = "=2.9.0"
jittr = "0.2.0"
lazy_static = "1.5.0"
libcgc = "0.1.1"
rand = "0.9.0"
rodio = "0.20.1"
rubato = "0.16.1"
tokio = { version = "1.44.1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
