[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
aes-gcm = "0.10.2"
base64 = "0.21.2"
cpal = { version = "0.15.2", features = ["jack"] }
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
flutter_rust_bridge = "=2.0.0-dev.22"
