[package]
name = "space-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
base64 = "0.21.2"
cpal = "0.15.2"
flutter_rust_bridge = "1.82.1"
once_cell = "1.18.0"
opus = "0.3.0"
rand = "0.8.5"
rodio = "0.17.1"
rubato = "0.12.0"
serde = {version = "1.0.164", features=["derive"]}
serde_json = "1.0.96"
sha2 = "0.10.6"

[lib]
crate-type = ["staticlib","cdylib"]
